# tau

./: .gitignore  AGENTS.md  README.md  debug_ragged.py  pyproject.toml  test_fused_attention.py  test_ragged_attention.py
MaxText/: kvcache.py  ragged_attention.py
examples/: chat_cli.py  grpo.py  multi_turn_chat.py  setup.py
gemma_jax/core/: cache.py  flash_attention.py  inference.py  model.py  ragged_attention.py  rope.py  segment.py  sp_tokenizer.py  weights.py
gemma_jax/tests/: cpu_test_runner.py  prompts.py  test_attention_bugs.py  test_attention_regressions.py  test_flash_attention.py  test_flash_attention_dispatch.py  test_fused_attention.py  test_integration.py  test_ragged_attention.py  test_ragged_attention_lengths.py  test_ring_buffer_wrap.py  test_segment_info.py  test_update_cache.py  test_zero_window.py
google_deepmind_gemma/: CLAUDE.md  MULTIMODAL.md
