[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["MaxText"]

[project]
name = "gemma-jax"
version = "0.0.1"
authors = [
  { name="Your Name", email="your.email@example.com" }, # TODO: Replace with your details
]
description = "A JAX implementation of the Gemma 3 model."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose your license
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
#"jax[tpu]",
      "jax",
      "datasets",
      "orbax",
      "sentencepiece"
]
